# codex-reset-watcher

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  README.zh-CN.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
config/: default-config.example.json
docs/: ARCHITECTURE.md  DATA_SOURCE.md  MANUAL_QA_CHECKLIST.zh-CN.md  MANUAL_QA_RESULT.v0.2.1.zh-CN.md  OPEN_BOX_EXPERIENCE.zh-CN.md  PRIVACY.md  ROADMAP.md  SOURCE_ADAPTER_RESEARCH.md  TEST_REPORT.md  USER_GUIDE.md  ZERO_CONFIG_QA.v0.2.1.zh-CN.md
examples/: mock-codex-usage.py
scripts/: qa-system-test.mjs  verify-mock-data.mjs
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: desktop.rs  diagnostics.rs  history.rs  lib.rs  main.rs  notifications.rs  sanitize.rs  session_log.rs  source_detect.rs  storage.rs  wham_adapter.rs
src/components/: AppHeader.tsx  CreditTimeline.tsx  DebugPanel.tsx  EmptyState.tsx  ErrorBoundary.tsx  HeaderCountdown.tsx  HistoryPage.tsx  Icons.tsx  LiquidGauge.tsx  MainContent.tsx  OverviewCards.tsx  RecommendationCard.tsx  RefreshProgress.tsx  SettingsModal.tsx
src/core/: alerts.test.ts  alerts.ts  bridge.ts  config.test.ts  config.ts  desktop.ts  history.ts  historyTrends.test.ts  index.ts  parser.ts  privacy.ts  qa.test.ts  recommend.ts  refreshLock.ts  refreshProgress.test.ts  refreshProgress.ts  status.ts  trends.ts  types.ts
src/core/sources/: autoDetectedSource.ts  connectionStatus.test.ts  connectionStatus.ts  index.ts  mockSource.ts  normalize.ts  scriptSource.ts  sources.test.ts  types.ts
src/hooks/: useAppVersion.ts
src/i18n/: en.json  format.ts  index.ts  ja.json  zh-CN.json  zh-TW.json
