[package]
name = "codex-reset-watcher"
version = "0.1.1"
description = "Local-first desktop watcher for Codex reset credits and rate-limit windows"
authors = ["codex-reset-watcher contributors"]
license = "MIT"
repository = "https://github.com/water04not-speak/codex-reset-watcher"
edition = "2021"

[lib]
name = "codex_reset_watcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 日志脱敏正则
regex = "1"

