[package]
name = "codex-reset-watcher"
version = "0.2.3"
description = "Local-first desktop watcher for Codex reset credits and rate-limit windows"
authors = ["codex-reset-watcher contributors"]
license = "MIT"
repository = "https://github.com/water04not-speak/codex-reset-watcher"
edition = "2021"

[lib]
name = "codex_reset_watcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
# 日志脱敏正则
regex = "1"
